--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8001",
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@storybook/addon-actions": "^5.0.10",
@@ -48,5 +47,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
