--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,33 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
+deploy:
+  machine:
+    enabled: true
+
+  working_directory: ~/client
+
+  steps:
+    - add_ssh_keys:
+        fingerprints:
+          - "0a:05:91:2a:ed:a5:7b:c3:c2:8f:67:7d:4f:94:e1:b1"
+    - checkout
+    - run:
+        name: Push Master to Production
+        command: |
+          git push https://github.com/thelittleblacksmith/scheduler.git master:production
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
