--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "extends": "react-app",
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "plugins": ["cypress"],
+  "env": {
+    "cypress/globals": true
+  }
 }
